--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -21,7 +21,7 @@ body{
   width:99vw;
   height:96vh;
   padding: 1%;
-  display: block;  /* flex-direction:column; */
+  display: inline-block;  /* flex-direction:column; */
   background-color: rgb(20,20,20);
 }
 
@@ -57,6 +57,14 @@ p{
 
 
 }
+
+#inputDiv{
+  margin-top: 10%;
+  background-color:rgb(20,20,20);
+  display: flex;
+  flex-direction: row;
+  flex-wrap:wrap;
+}
 #TextInput{
   width:50%;
   height:28vh;
@@ -89,12 +97,6 @@ textarea {
   white-space: normal;
   -webkit-appearance: none;
 }
-#inputDiv{
-  margin-top: 10%;
-  background-color: rgb(20,20,20);
-  display: flex;
-  flex-wrap: wrap;
-}
 #TopButton{
 font-family: 'gap_sansbold', sans-serif;
   /* background: url('microphone-342.png') no-repeat 50% 40%; */
@@ -107,6 +109,7 @@ border-radius: 50%;
 border-style: outset;
 border-width:15px;
 border-color: tomato;
+font-style:italic;
 }
 
 #TopButton:hover{
@@ -144,7 +147,6 @@ box-shadow: 0px 0px 9px #ffff;
    background-color: inherit;
    width: 60%;
    margin:auto;
-   text: 3vw;
  }
 .aboutP{
   text-align: justify;
@@ -163,4 +165,41 @@ box-shadow: 0px 0px 9px #ffff;
     font-family: 'gap_sansregular', sans-serif;
     color:rgb(230,230,230);
     background-color: rgb(20,20,20);
+}
+
+/* ///////////////////////////////////// mobile ////////////////////////////////////////// */
+@media only screen and (max-width: 768px) {
+
+  body{
+    width:99vw;
+    height:100vh;
+    background-color: rgb(20,20,20);
+  }
+
+  #headerFR{
+    font-size: 8vw;
+  }
+  #headerEN{
+    font-size: 7vw;
+  }
+
+#TopButton{
+  width: 200px;
+  height: 200px;
+  font-size: 6vw;
+  margin-bottom: 3vh;
+}
+  #TextInput{
+    width: 80%;
+    height: 25vh;
+    overflow-y: scroll;
+    margin: auto;
+  }
+  #BottomButton{
+    width: 50%;
+    margin: auto;
+    margin-top:2vh;
+  }
+  .about{
+width: 80%;  }
 }
