--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -151,7 +151,7 @@ textarea {
   background-color: tomato !important;
 }
 /* ////////////////////////////////// modal //////////////////////////////////// */
-#success_modal{
+.modal{
   position: fixed;
   top:0;
   right:0;
@@ -160,10 +160,9 @@ textarea {
   height: 100%;
   color: black;
   background-color: rgba(20, 20, 20, 0.5);
-  display: none;
 }
 
-#success_modal div{
+.modal div{
   background-color: white;
   width: 90%;
   max-width: 300px;
@@ -172,6 +171,13 @@ textarea {
   margin: auto;
   margin-top: 10%;
   border-radius: 10px;
+}
+#success_modal{
+  display: none;
+}
+
+#profanity_modal{
+  display: none;
 }
 
 #OKButton {
@@ -186,6 +192,7 @@ textarea {
   border-style: outset;
   border-width: 5px;
   border-color: tomato;
+  margin: 5px 0px;
 }
 
 #OKButton:hover {
